--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@ document.addEventListener('DOMContentLoaded', function() {
           <div class="member-image">
             <img src="sanjana.jpg" alt="Dr. Priya Patel" />
           </div>
-          <h3 class="member-name">Sanjana</h3>
+          <h3 class="member-name">Sanjana Singh</h3>
         </div>
 
         <div class="team-member">
