--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ We also believe in the power of community. By sharing a common space with others
               <div class="counselor-card">
                   <img src="profile.png" alt="Dr.Priyanka Singhal" class="counselor-image">
                   <h3 class="counselor-name">Dr.Priyanka Singhal</h3>
-                  <p class="counselor-qualification">M.Sc in Clinical Psychology</p>
+                  <p class="counselor-qualification">MBBS, MD- The West Bengal University Of Health Sciences,<br>Psychiatrist</p>
                   <button class="book-appointment" data-counselor="Dr.Priyanka Singhal">Book Appointment</button>
               </div>
           </div>
@@ -524,15 +524,15 @@ We also believe in the power of community. By sharing a common space with others
               <div class="counselor-card">
                   <img src="profile1.png" alt="Dr. Sarmishtha Chakrabarti" class="counselor-image">
                   <h3 class="counselor-name">Dr. Sarmishtha Chakrabarti</h3>
-                  <p class="counselor-qualification">Ph.D in Counseling Psychology</p>
+                  <p class="counselor-qualification">MBBS, MRCPsych, <br>Diploma in Psychological Medicine-DPM</p>
                   <button class="book-appointment" data-counselor="Dr. Sarmishtha Chakrabarti">Book Appointment</button>
               </div>
           </div>
           <div class="carousel-item">
               <div class="counselor-card">
-                  <img src="/placeholder.svg?height=200&width=200" alt="Counselor 3" class="counselor-image">
-                  <h3 class="counselor-name">Dr. Emily Brown</h3>
-                  <p class="counselor-qualification">M.Sc in Health Psychology</p>
+                  <img src="profileimg.png" alt="Counselor 3" class="counselor-image">
+                  <h3 class="counselor-name">Dr. Subrata Naskar</h3>
+                  <p class="counselor-qualification">MBBS, MD (Psychiatry) <br> Consultant Neuropsychiatrist</p>
                   <button class="book-appointment" data-counselor="Dr. Emily Brown">Book Appointment</button>
               </div>
           </div>
@@ -560,7 +560,6 @@ We also believe in the power of community. By sharing a common space with others
       <p class="feature">✓ Highly qualified team of licensed psychologists</p>
       <p class="feature">✓ English and all regional Indian languages</p>
       <p class="feature">✓ 100% private & secure platform</p>
-      <p class="feature">✓ 24/7 support available</p>
   </div>
 </section>
 
@@ -815,10 +814,10 @@ document.addEventListener('DOMContentLoaded', function() {
 </div>
 <div class="contact-details">
   <h3>How to Reach Us</h3>
-  <p>24/7 Helpline: +91 99999 88888 (Example)</p>
-  <p>Email: support@mentalhealthkolkata.org</p>
+  <p>24/7 Helpline: +91 9635881814</p>
+  <p>Email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="87f4f2f7f7e8f5f3c7eae2e9f3e6ebefe2e6ebf3efece8ebece6f3e6a9e8f5e0">unravel_help@gmail.com</a></p>
   <p>
-    For general inquiries, we aim to respond within 24 hours. If you’re in need of immediate support, please reach out to one of the helplines mentioned below.
+    For general inquiries, we aim to respond within 24 hours. If you're in need of immediate support, please reach out to one of the helplines mentioned below.
   </p>
   <h3>Crisis Resources</h3>
   <p>
@@ -826,7 +825,7 @@ document.addEventListener('DOMContentLoaded', function() {
     Available Monday to Saturday, 10 AM to 8 PM
   </p>
   <p>
-    Kolkata-based NGO Helpline: +91 98300 12345 (Example)<br />
+    Kolkata-based NGO Helpline: 03346021085<br />
     Available for immediate emotional support and crisis intervention.
   </p>
 </div>
@@ -879,7 +878,7 @@ document.addEventListener('DOMContentLoaded', function() {
           <div class="member-image">
             <img src="boy.jpg" alt="Alex Martinez" />
           </div>
-          <h3 class="member-name">Mousam</h3>
+          <h3 class="member-name">Mousam Das</h3>
         </div>
       </div>
     </div>
@@ -924,7 +923,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
 
   // Add this to your existing JavaScript file or in a <script> tag at the end of your HTML body
 document.addEventListener('DOMContentLoaded', function() {
